Small style tweaks to comments, replies, and fix Search overlay on mobile

--- a/pillar-web/src/styles/_comments.sass
+++ b/pillar-web/src/styles/_comments.sass
@@ -11,7 +11,7 @@
 
 	#comments-list-header
 		#comments-list-title
-			padding: 15px 0 0
+			padding: 15px 0 10px 0
 			margin: 0
 			font:
 				size: 1.5em
@@ -56,7 +56,7 @@
 			display: flex
 			flex-direction: column
 
-			padding: 25px 0
+			padding: 15px 0 25px 0
 			transition: background-color 150ms ease-in-out
 
 			/* Header containing author, time, and badges if any*/
@@ -68,7 +68,7 @@
 					padding-right: 10px
 
 					img
-						border-radius: 3px
+						border-radius: 50%
 						width: 20px
 						height: 20px
 
@@ -112,7 +112,7 @@
 						top: 15px
 
 				p
-					line-height: 1.3em
+					line-height: 1.5em
 
 					+media-xs
 						padding:
@@ -211,11 +211,19 @@
 					color: $color-success
 
 			&.is-reply
-				margin-left: 30px
 				padding:
-					top: 0
-					left: 15px
-				border-left: 2px solid lighten($color-text-dark-hint, 15%)
+					top: 25px
+					left: 30px
+				background-color: darken(white, 2%)
+
+				&:first-child
+					background-color: darken(white, 2%)
+
+				&:nth-child(odd)
+					background-color: white
+
+			&.is-first
+				border-top: 1px solid lighten($color-text-dark-hint, 15%)
 
 			&.is-team
 				.comment-author
@@ -238,9 +246,9 @@
 			/* Little gravatar icon on the left */
 			.comment-reply-avatar
 				img
-					border-radius: 3px
-					width: 20px
-					height: 20px
+					border-radius: 50%
+					width: 25px
+					height: 25px
 
 			/* textarea field, submit button and reply details */
 			.comment-reply-form
