--- a/pillar-web/src/styles/_search.sass
+++ b/pillar-web/src/styles/_search.sass
@@ -31,15 +31,16 @@ $search-hit-width_list: 48px
 		max-width: 350px
 	+media-md
 		max-width: 350px
-
 	+media-sm
 		max-width: 120px
 	+media-xs
 		display: block
-		width: 100%
 		margin: 0 10px
-		width: 92%
-		+clearfix
+		width: 75%
+		position: absolute
+		z-index: $z-index-base
+		top: 2px
+		left: 40px
 
 	.search-icon
 		position: absolute
